--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body::after {
     margin-top: 50px;
     text-shadow: 0 0 10px hsla(108, 100%, 50%, 0.3);
     font-weight: bold;
-    max-width: 70%;
+    max-width: 65%;
     margin-left: auto;
     margin-right: auto;
     line-height: 1.2;
@@ -118,17 +118,40 @@ body::after {
 
 .game-text {
     color: hsl(108, 100%, 50%);
-    text-align: center;
-    font-size: 24px;
-    margin-top: 20vh;
+    text-align: left;
+    font-size: 20px;
+    margin-top: 5vh;
     text-shadow: 0 0 10px hsla(108, 100%, 50%, 0.3);
     line-height: 1.5;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
+    font-family: "DejaVu Sans Mono", monospace;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .game-text p {
     margin: 10px 0;
 }
 
+/* Style for the choices */
+.game-text p:nth-last-child(-n+3) {
+    color: hsl(108, 100%, 70%);
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.return {
+    width: 100%;
+    text-align: center;
+    color: hsl(108, 100%, 50%);
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 100px;
+    margin-bottom: auto;
+    letter-spacing: 2px;
+    text-shadow: 0 0 15px hsla(108, 100%, 50%, 0.5);
+    animation: fade 2s infinite alternate ease-in-out;
+}
